[dns]: add dns resolver func
Signed-off-by: Ruibo Lu <reaperlu@hust.edu.cn>

--- a/ncs_wifi_ble_camera/prj.conf
+++ b/ncs_wifi_ble_camera/prj.conf
@@ -9,7 +9,7 @@ CONFIG_NETWORKING=y
 CONFIG_NET_TCP=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_SOCKETS=y
-CONFIG_ZVFS_OPEN_MAX=6
+CONFIG_ZVFS_OPEN_MAX=8
 CONFIG_POSIX_API=y
 
 # Kernel options
@@ -42,7 +42,7 @@ CONFIG_NET_MAX_CONTEXTS=10
 CONFIG_NET_SHELL=y
 
 # DNS
-# CONFIG_DNS_RESOLVER=y
+CONFIG_DNS_RESOLVER=y
 
 # Network application options and configuration
 CONFIG_NET_CONFIG_SETTINGS=y
