--- a/ncs_wifi_ble_camera/prj.conf
+++ b/ncs_wifi_ble_camera/prj.conf
@@ -23,6 +23,7 @@ CONFIG_NET_LOG=y
 CONFIG_LOG=y
 CONFIG_NET_STATISTICS=y
 CONFIG_PRINTK=y
+CONFIG_SHELL_BACKEND_SERIAL_TX_RING_BUFFER_SIZE=120
 
 # Network buffers
 CONFIG_NET_PKT_RX_COUNT=16
